# sonic-tools

./: .dockerignore  .gitignore  Caddyfile  Caddyfile.prod  README.md  docker-compose.yml  reupdateBackend.sh  reupdateFronted.sh  reupdateSonic-tools.sh  test.json.json
Backend/: Dockerfile  go.mod  main.go
Backend/handlers/: upload.go
Backend/services/: boost.go  checks.go  compress.go  convert.go  gRPCport.go  merge.go  metadata.go  trim.go  upload.go
Backend/utils/: types.go
Backend/wrapers/: cors.go
Frontend/: Dockerfile  go.mod  main.go  package-lock.json  package.json  tailwind.config.js
Frontend/components/apply_button/: apply_buttom.templ  apply_buttom_templ.go
Frontend/components/body/: boost.templ  boost_templ.go  compress.templ  compress_templ.go  convert.templ  convert_templ.go  home.templ  home_templ.go  merge.templ  merge_templ.go  metadata.templ  metadata_templ.go  tool.templ  tool_templ.go  trim.templ  trim_templ.go
Frontend/components/card/: card.templ  card_templ.go
Frontend/components/footer/: footer.templ  footer_templ.go
Frontend/components/head/: metaData.templ  metaData_templ.go
Frontend/router/: tools.go
Frontend/views/: layout.templ  layout_templ.go
Services/rust-audio/: Cargo.toml  Dockerfile  build.rs
Services/rust-audio/src/: lib.rs  main.rs
Services/rust-audio/src/services/: boost.rs  compress.rs  convert.rs  merge.rs  metadata.rs  mod.rs  trim.rs
Services/rust-audio/src/utils/: boost.rs  compress.rs  conversion.rs  ffmpeg.rs  merge.rs  metadata.rs  mod.rs  temp.rs  trim.rs  zip.rs
proto/: audio.proto
(+23 files in other folders)
