[package]
name = "rust-audio"
version = "0.1.0"
edition = "2024"

[dependencies]
tonic = "0.11"
prost = "0.12"
tokio = { version = "1", features = ["full"] }
hound = "3.5"
symphonia = { version = "0.5", features = ["mp3", "wav", "flac", "ogg", "aac"] }
zip = "5.0.0"
tempfile = "3.21.0"

[build-dependencies]
tonic-build = "0.11"
