[package]
name = "rust-audio"
version = "0.1.0"
edition = "2024"

[dependencies]
tonic = "0.14.2"
tonic-prost = "0.14.2"
prost = "0.14.1"
tokio = { version = "1", features = ["full"] }
hound = "3.5"
symphonia = { version = "0.5", features = ["mp3", "wav", "flac", "ogg", "aac"] }
zip = "5.0.0"
tempfile = "3.21.0"

[build-dependencies]
tonic-prost-build = "0.14.2"
